#VERSION 0.8.3#

 - added method _registryConfig() in Peak_View. We can now call methods for Peak_View inside an application 
   configuration file like set(), setRenderEngine(), rendering engine methods, etc... Config use keyname 'view'
   ex: view.set.myvar = "data", view.setRenderEngine = "Layouts", etc...

 - fixed Peak_Config_Ini::loadFile() to throw a exception if ini file contains syntax error(s) (php 5.2.7+)

 - rewrited appcreate.php to support new important changes
 
 - fixed listActions to flush $actions before listing actions methods and added support of $action_prefix to regex.

 - moved string to array conversion from matchRegex to addRegex in Peak_Router 

 - deleted deprecated folder views/functions


#VERSION 0.8.2#

 - fixed getRequestURI() when $base_uri = '/' (it mean that app located at the base of server url ex: http://example.com)

 - fixed double slash in url of method Peak_Router::setBaseUri() and Peak_Render::baseUrl()

 - method getObjectList() renamed to getObjectsList() in Peak_Registry

 - cleaning tests folder and simpletest and switching to PHPUnit

 - added method getRoute() in Peak_Controller_Front and moved code from preDispatch() there. 

 - fixed minor error in Peak_Application::__construct(). bootstrap instance was not saved into Peak_Application $bootstrap
   property. removed registration of Peak_Core in Peak_Registry since its a singleton.

 - removed getFunctionsFile() from Peak_View. App views file functions.php feature removed in favor of view helpers objects.

 - method run() of Peak_Application returns the object itself.

 - methods isController(), isInternalController() and isModule() moved from Peak_Core to Peak_Controller_Front.
   fixed Peak_Controller_Front accordingly.
 
 - deprecated constant APP_THEME and modified Peak_Core::getDefaultAppPaths() accordingly

 - removed experimental stuff about plugins in Peak_Core

 - deleted deprecated method init() in Peak_Core
 